# goal-docs

./: .gitignore  README.md  _config.yml  index.md
Crypto/: upbit-screener-2026-06-14.md
crypto-screener/: screener_20260510.json  screener_20260510.md  screener_20260511.json  screener_20260511.md  screener_20260512.json  screener_20260512.md  screener_20260513.json  screener_20260513.md  screener_20260514.json  screener_20260514.md  screener_20260515.json  screener_20260515.md  (+28 more)
stock-theme/: SKILL.md  config.yaml  pyproject.toml  report_20260427.json  report_20260427.md  report_20260428.json  report_20260428.md  report_20260429.json  report_20260429.md  report_20260510.json  report_20260510.md  report_20260511.json  report_20260511.md  report_20260512.json  report_20260512.md  report_20260514.json  report_20260514.md  report_20260515.json  report_20260515.md  report_20260519.json  report_20260519.md  report_20260521.json  report_20260521.md  report_20260522.json  report_20260522.md  report_20260526.json  report_20260526.md  report_20260601.json  report_20260601.md  report_20260602.json  report_20260602.md  report_20260605.json  report_20260605.md  report_20260608.json  report_20260608.md  report_20260609.json  report_20260609.md  report_20260617.json  report_20260617.md
stock-theme/reference/: scoring_methodology.md  theme_dict.yaml
stock-theme/scripts/: data_collector.py  main_analyzer.py  paths.py  report_generator.py  scorer.py  theme_mapper.py
stock-theme/shorts/20260427/: description.md  scenes.json  script.md  subtitles.srt  tags.txt  title.txt
(+55 files in other folders)
