[project]
name = "stock-theme"
version = "0.1.0"
description = "Daily Korean stock market strong-theme finder (Claude Code skill)"
requires-python = ">=3.10"
dependencies = [
    "finance-datareader>=0.9",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 110
target-version = "py310"
